--- a/index.html
+++ b/index.html
@@ -4,9 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Da Capo Academy of Music - Etobicoke</title>
 </head>
 <body>
-    Welcome to our page!
+
+    <section class="container-fluid bg-dark text-light">
+        <div class="container">
+            <div class="row p-5">
+                <div class="col-sm-3 my-auto">
+                    <img class="img-fluid" src="img/logo.png" alt="Da Capo Academy of Music Logo">
+                </div>
+                <div class="col-sm-9 text-center">
+                    <h1>Music Lessons in Etobicoke</h1>
+                    <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+    
+                    <div class="d-sm-flex justify-content-center pt-3">
+                        <div class="btn btn-warning mb-xs-3 me-sm-3 text-nowrap">Free Trial Lesson</div>
+                        <div class="btn btn-primary mt-xs-3 ms-sm-3 text-nowrap">Download Info Pack</div>
+                    </div>
+                </div>
+            </div><!--/row-->
+        </div>
+    </section>
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
+  <div class="container-fluid dcam-blue-dark">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse navbar-dark" id="navbarNav">
+            <ul class="navbar-nav mx-auto text-uppercase fw-bolder">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Music Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Rates</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Teachers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Reviews</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Shop</a>
+                </li>
+            </ul>
+        </div>
+  </div>
+</nav><!--/navbar-->
+
+
+<!--carousel-->
+<div class="row row-content mt-sm-4">
+    <div class="col-md-6 mx-auto">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/breadcrumb-trail.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/chrome-river.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/react-lake.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>    
+        </div><!--carousel col-->
+</div><!--/carousel row-->
+
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<!-- CDN scripts, for testing -->
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
 </body>
 </html>
