--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse navbar-dark" id="navbarNav">
             <ul class="navbar-nav mx-auto roboto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Music Lessons</a>
@@ -71,7 +71,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
@@ -85,38 +85,52 @@
 </nav><!--/navbar-->
 
 
-<!--carousel-->
-<!-- <div class="row row-content mt-sm-4">
-    <div class="col-md-6 mx-auto">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/breadcrumb-trail.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/chrome-river.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/react-lake.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>    
-        </div> -->
-        <!--carousel col-->
-</div><!--/carousel row-->
+<div class="container mt-5">
+    <div class="row">
+        <!--left col-->
+        <div class="col-md-6">
+            <h2 class="mb-5 text-center">Submit Your Question</h2>
+
+            <form>
+                <div class="row mb-4">
+                    <div class="col-md-6 px-0 pe-md-3">
+                        <label for="firstName" class="form-label">First Name:</label>
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name">
+                    </div>
+                    <div class="col-md-6 px-0 ps-md-3">
+                        <label for="lastName" class="form-label">Last Name:</label>
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name">
+                    </div>
+                </div>
+
+                <div class="row mb-4">
+                    <div class="col-md-6 px-0 pe-md-3">
+                        <label for="phone" class="form-label">Phone:</label>
+                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="phone number">
+                    </div>
+                    <div class="col-md-6 px-0 ps-md-3">
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="email">
+                    </div>
+                </div>
+
+                <div class="row form-group">
+                </div>
+
+                <div class="row form-group mb-4">
+                    <label for="feedback" class="form-label">Your Feedback:</label>
+                    <textarea class="form-control"rows="7" id="feedback" placeholder="your feedback"></textarea>
+                </div>
+
+                <div class="row justify-content-center mb-4">
+                    <button type="submit" class="btn btn-primary">Send Feedback</button>
+                </div>
+
+            </form>
+
+        </div><!--/form-->
+    </div><!--/row-->
+</div><!--/container-->
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
