more adjustment to header responsiveness, updated contact form

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
             </div>
             <div class="col-md-4 col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
                 <h3 class="ovo">Contact Us:</h3>
-                <a role="button" class="btn text-light text-nowrap" href="tel:+12365551234"><i class="fas fa-phone"></i> (416) 237-9595</a>
-                <a role="button" class="btn text-light text-nowrap" href="mailto:campsites@nucamp.co"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+                <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+                <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
             </div>
 
         </div>
@@ -86,49 +86,46 @@
 
 
 <div class="container mt-5">
-    <div class="row">
-        <!--left col-->
-        <div class="col-md-6">
-            <h2 class="mb-5 text-center">Submit Your Question</h2>
-
+    <div class="row d-flex justify-content-center">
+        <!--main col-->
+        <div class="col-lg-6 bg-notes">
+            <h2 class="text-center">Contact Form</h2>
+            <p class="mb-5 text-muted text-center">Have a question about music lessons?<br> Just fill out this quick form and we will get back to you as soon as we can!</p>
             <form>
-                <div class="row mb-4">
-                    <div class="col-md-6 px-0 pe-md-3">
+                <div class="row mb-4 px-3">
+                    <div class="col-md-6">
                         <label for="firstName" class="form-label">First Name:</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name">
+                        <input type="text" class="form-control" id="firstName" name="firstName">
                     </div>
-                    <div class="col-md-6 px-0 ps-md-3">
+                    <div class="col-md-6">
                         <label for="lastName" class="form-label">Last Name:</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name">
+                        <input type="text" class="form-control" id="lastName" name="lastName">
                     </div>
                 </div>
 
-                <div class="row mb-4">
-                    <div class="col-md-6 px-0 pe-md-3">
+                <div class="row mb-4 px-3">
+                    <div class="col-md-6">
                         <label for="phone" class="form-label">Phone:</label>
-                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="phone number">
+                        <input type="tel" class="form-control" id="phone" name="phone">
                     </div>
-                    <div class="col-md-6 px-0 ps-md-3">
+                    <div class="col-md-6">
                         <label for="email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="email">
+                        <input type="email" class="form-control" id="email" name="email">
                     </div>
                 </div>
 
-                <div class="row form-group">
-                </div>
-
-                <div class="row form-group mb-4">
+                <div class="row-md-12 px-3 mb-4">
                     <label for="feedback" class="form-label">Your Feedback:</label>
-                    <textarea class="form-control"rows="7" id="feedback" placeholder="your feedback"></textarea>
+                    <textarea class="form-control"rows="7" id="feedback"></textarea>
                 </div>
 
-                <div class="row justify-content-center mb-4">
+                <div class="row justify-content-center mb-4 px-3">
                     <button type="submit" class="btn btn-primary">Send Feedback</button>
                 </div>
 
             </form>
 
-        </div><!--/form-->
+        </div><!--/main col-->
     </div><!--/row-->
 </div><!--/container-->
 
