--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     <div class="container-fluid bg-dcam bg-light">
         <div class="row">
 
-            <div class="col-md-3 col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
+            <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
                 <img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo">
             </div>
 
-            <div class="col-md-5 col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="ovo">Music Lessons in Etobicoke</h1>
+            <div class="col-lg-6 col-xxl-7 text-center p-5">
+                <h1 class="display-4">Music Lessons in Etobicoke</h1>
                 <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
 
-                <div class="d-md-flex justify-content-center pt-3">
-                    <div class="btn btn-warning btn-lg mb-3 mb-sm-0 me-sm-3 text-nowrap">Free Trial Lesson</div>
-                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 text-nowrap">Download Info Pack</div>
+                <div class="d-md-flex justify-content-center mt-5">
+                        <div class="btn btn-warning btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div>
+                        <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</div>
                 </div>
             </div>
-            <div class="col-md-4 col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
+            <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
                 <h3 class="ovo">Contact Us:</h3>
-                <a role="button" class="btn text-light text-nowrap" href="tel:+12365551234"><i class="fas fa-phone"></i> (416) 237-9595</a>
-                <a role="button" class="btn text-light text-nowrap" href="mailto:campsites@nucamp.co"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+                <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+                <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
             </div>
 
         </div>
