added teachers.html and rates.html boiler plate code

--- a/teachers.html
+++ b/teachers.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="teachers.html">Teachers</a>
+                    <a class="nav-link active" aria-current="page" href="#">Teachers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Reviews</a>
@@ -71,7 +71,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
@@ -86,47 +86,9 @@
 
 
 <div class="container mt-5">
-    <div class="row d-flex justify-content-center">
-        <!--main col-->
-        <div class="col-lg-6 bg-notes">
-            <h2 class="text-center">Contact Form</h2>
-            <p class="mb-5 text-muted text-center">Have a question about music lessons?<br> Just fill out this quick form and we will get back to you as soon as we can!</p>
-            <form>
-                <div class="row mb-4 px-3">
-                    <div class="col-md-6">
-                        <label for="firstName" class="form-label">First Name:</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="lastName" class="form-label">Last Name:</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName">
-                    </div>
-                </div>
 
-                <div class="row mb-4 px-3">
-                    <div class="col-md-6">
-                        <label for="phone" class="form-label">Phone:</label>
-                        <input type="tel" class="form-control" id="phone" name="phone">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                </div>
+    Teacher info goes here
 
-                <div class="row-md-12 px-3 mb-4">
-                    <label for="feedback" class="form-label">Your Feedback:</label>
-                    <textarea class="form-control"rows="7" id="feedback"></textarea>
-                </div>
-
-                <div class="row justify-content-center mb-4 px-3">
-                    <button type="submit" class="btn btn-primary">Send Feedback</button>
-                </div>
-
-            </form>
-
-        </div><!--/main col-->
-    </div><!--/row-->
 </div><!--/container-->
 
 
