--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <a class="nav-link" href="#">Music Lessons</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Rates</a>
+                    <a class="nav-link" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Teachers</a>
+                    <a class="nav-link" href="teachers.html">Teachers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Reviews</a>
