--- a/index.html
+++ b/index.html
@@ -118,6 +118,55 @@
         <!--carousel col-->
 </div><!--/carousel row-->
 
+<div class="row bg-dark">
+
+  <div class="col-md-12 text-center mb-4">
+    <h2>Meet Our Teachers</h2>
+  </div>
+
+
+  <div class="col-md-9 mx-auto">
+
+    <div class="card-group">
+      <div class="card">
+        <img src="img/teachers/andrew2.jpg" class="card-img-top img-fluid" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Andrew Marzotto</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-muted">Read full bio...</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/teachers/raul2.jpg" class="card-img-top img-fluid" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Raul Pineda</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-muted">Read full bio...</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/teachers/terry2.jpg" class="card-img-top img-fluid" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Terry Babyuk</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-muted">Read full bio...</small>
+        </div>
+      </div>
+    </div>
+
+
+  </div><!--/card col-->
+
+
+</div><!--row-->
+
+
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
