--- a/index.html
+++ b/index.html
@@ -118,53 +118,64 @@
         <!--carousel col-->
 </div><!--/carousel row-->
 
-<div class="row bg-dark">
 
-  <div class="col-md-12 text-center mb-4">
+<!-- testimonials section -->
+
+<div class="container">
+<section class="row">
+
+testing
+
+
+</section>
+</div>
+
+
+<!-- teachers section -->
+<div class="container-fluid dcam-blue-reg py-5">
+
+  <!--teachers section header-->
+  <div class="col-md-12 text-center mb-5 text-light">
     <h2>Meet Our Teachers</h2>
   </div>
 
+  <!--teachers section 2 div-->
 
-  <div class="col-md-9 mx-auto">
+  <div class="row justify-content-center">
 
-    <div class="card-group">
-      <div class="card">
-        <img src="img/teachers/andrew2.jpg" class="card-img-top img-fluid" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Andrew Marzotto</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-muted">Read full bio...</small>
-        </div>
-      </div>
-      <div class="card">
-        <img src="img/teachers/raul2.jpg" class="card-img-top img-fluid" alt="...">
+    <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
+        <img src="img/teachers/raul2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Raul Pineda</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-        <div class="card-footer text-center">
-          <small class="text-muted">Read full bio...</small>
+    </div>
+
+      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
+        <img src="img/teachers/andrew2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Andrew Marzotto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/teachers/terry2.jpg" class="card-img-top img-fluid" alt="...">
+
+      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
+        <img src="img/teachers/terry2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Terry Babyuk</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-muted">Read full bio...</small>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
 
+</div><!--/teachers section-->
 
-  </div><!--/card col-->
 
 
-</div><!--row-->
+
 
 
 
