--- a/index.html
+++ b/index.html
@@ -121,17 +121,25 @@
 
 <!-- testimonials section -->
 
-<div class="container">
-<section class="row">
-
-testing
-
-
-</section>
+<div class="container py-5">
+<div class="card mb-3 mx-auto" style="max-width: 1000px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/student.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title mb-4">Start learning your favourite instrument today!</h5>
+        <p class="card-text">Located in Etobicoke (Humber Valley Village), we offer music lessons to students of all ages and skill levels. The word “Da Capo” is an Italian musical term meaning “from the top”, indicating that a piece of music is to be played from the beginning. We thought this was a perfect name for our school, as our intent is to teach music to students “from the top”! Please explore our website to learn more about us. Have a question? Call us or fill out a “Contact Us” form and we will get back to you as possible. Interested in music lessons with us? Awesome! Fill out our “Free Trial Lesson” form and we will contact you to schedule your free, no-obligation trial lesson! (Learn more about who we are on our About Us page.</p>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 
 
-<!-- teachers section -->
+
+<!-- TEACHERS SECTION -->
 <div class="container-fluid dcam-blue-reg py-5">
 
   <!--teachers section header-->
@@ -139,12 +147,12 @@ testing
     <h2>Meet Our Teachers</h2>
   </div>
 
-  <!--teachers section 2 div-->
+  <!--teachers section row-->
 
   <div class="row justify-content-center">
 
-    <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
-        <img src="img/teachers/raul2.jpg" class="card-img-top" alt="...">
+    <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+        <img src="img/teachers/raul2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h5 class="card-title">Raul Pineda</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -152,8 +160,8 @@ testing
         </div>
     </div>
 
-      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
-        <img src="img/teachers/andrew2.jpg" class="card-img-top" alt="...">
+      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+        <img src="img/teachers/andrew2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h5 class="card-title">Andrew Marzotto</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -161,8 +169,8 @@ testing
         </div>
       </div>
 
-      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
-        <img src="img/teachers/terry2.jpg" class="card-img-top" alt="...">
+      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+        <img src="img/teachers/terry2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h5 class="card-title">Terry Babyuk</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
