added 'offers' section and made it responsive

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </div>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
-  <div class="container-fluid dcam-blue-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
+  <div class="container-fluid dcam-blue-reg">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -119,7 +119,7 @@
 </div><!--/carousel row-->
 
 
-<!-- testimonials section -->
+<!-- WELCOME SECTION -->
 
 <div class="container py-5">
 <div class="card mb-3 mx-auto" style="max-width: 1000px;">
@@ -139,8 +139,116 @@
 
 
 
+<!-- WHAT WE OFFER SECTION -->
+
+<div class="container py-5">
+
+    <div class="row justify-content-evenly">
+
+        <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+          <div class="row g-0">
+
+              <div class="col-md-12 col-lg-4 text-center">
+                <i class="fas fa-child fa-4x offers-icon"></i>
+              </div>
+
+              <div class="col-md-12 col-lg-8">
+                <div class="card-body text-center text-lg-start">
+                  <h4 class="card-title mb-4 ovo text-uppercase"><strong>All Ages & Levels</strong></h4>
+                  <p class="card-text">Lessons for children, adults, and even toddlers!</p>
+                </div>
+              </div>
+          </div>
+        </div><!--card col-->
+
+        <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+            <div class="row g-0">
+
+                <div class="col-md-12 col-lg-4 text-center">
+                  <i class="fas fa-user-graduate fa-4x offers-icon"></i>
+                </div>
+
+                <div class="col-md-12 col-lg-8">
+                  <div class="card-body text-center text-lg-start">
+                    <h4 class="card-title mb-4 ovo text-uppercase"><strong>Exam Prep</strong></h4>
+                    <p class="card-text">We specialize in preparing students for RCM (Royal Conservatory) Exams.</p>
+                  </div>
+                </div>
+            </div>
+        </div><!--card col-->
+
+        <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+          <div class="row g-0">
+
+              <div class="col-md-12 col-lg-4 text-center">
+                <i class="far fa-calendar-check fa-4x offers-icon"></i>
+              </div>
+
+              <div class="col-md-12 col-lg-8">
+                <div class="card-body text-center text-lg-start">
+                  <h4 class="card-title mb-4 ovo text-uppercase"><strong>Flexibility</strong></h4>
+                  <p class="card-text">We do our best to accomodate you on a day that works for you.</p>
+                </div>
+              </div>
+          </div>
+      </div><!--card col-->
+
+      <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+        <div class="row g-0">
+
+            <div class="col-md-12 col-lg-4 text-center">
+              <i class="far fa-building fa-4x offers-icon"></i>
+            </div>
+
+            <div class="col-md-12 col-lg-8">
+              <div class="card-body text-center text-lg-start">
+                <h4 class="card-title mb-4 ovo text-uppercase"><strong>Great Venue</strong></h4>
+                <p class="card-text">Individual music rooms, recital area and a lounge!</p>
+              </div>
+            </div>
+        </div>
+    </div><!--card col-->
+
+    <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+      <div class="row g-0">
+
+          <div class="col-md-12 col-lg-4 text-center">
+            <i class="fas fa-map-marker-alt fa-4x offers-icon"></i>
+          </div>
+
+          <div class="col-md-12 col-lg-8">
+            <div class="card-body text-center text-lg-start">
+              <h4 class="card-title mb-4 ovo text-uppercase"><strong>Convenient Location</strong></h4>
+              <p class="card-text">Humbertown Plaza: free parking, shops and cafés</p>
+            </div>
+          </div>
+      </div>
+  </div><!--card col-->
+
+  <div class="card mb-3 col-sm-12 col-md-5 py-5 py-md-3 no-border">
+    <div class="row g-0">
+
+        <div class="col-md-12 col-lg-4 text-center">
+          <i class="far fa-thumbs-up fa-4x offers-icon"></i>
+        </div>
+
+        <div class="col-md-12 col-lg-8">
+          <div class="card-body text-center text-lg-start">
+            <h4 class="card-title mb-4 ovo text-uppercase"><strong>Awesome Deals</strong></h4>
+            <p class="card-text">Referral prizes and family member discounts!</p>
+          </div>
+        </div>
+    </div>
+</div><!--card col-->
+
+    </div><!--/row-->
+</div><!--/container-->
+
+
+
+
 <!-- TEACHERS SECTION -->
-<div class="container-fluid dcam-blue-reg py-5">
+<div class="container-fluid dcam-blue-dark py-5">
 
   <!--teachers section header-->
   <div class="col-md-12 text-center mb-5 text-light">
@@ -181,6 +289,9 @@
 
 </div><!--/teachers section-->
 
+
+
+<!-- FOOTER SECTION -->
 
 
 
