--- a/teachers.html
+++ b/teachers.html
@@ -42,7 +42,7 @@
     </div>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
   <div class="container-fluid dcam-blue-dark">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
