added content to 'rates' page, including downloadable PDFs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top mb-5">
   <div class="container-fluid dcam-blue-reg">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
 <div class="container py-5">
 <div class="card mb-3 mx-auto" style="max-width: 1000px;">
   <div class="row g-0">
-    <div class="col-md-4">
+    <div class="col-md-4 text-center text-md-start">
       <img src="img/student.png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
@@ -149,12 +149,12 @@
           <div class="row g-0">
 
               <div class="col-md-12 col-lg-4 text-center">
-                <i class="fas fa-child fa-4x offers-icon"></i>
+                <i class="fas fa-child fa-3x offers-icon"></i>
               </div>
 
               <div class="col-md-12 col-lg-8">
                 <div class="card-body text-center text-lg-start">
-                  <h4 class="card-title mb-4 ovo text-uppercase"><strong>All Ages & Levels</strong></h4>
+                  <h4 class="card-title mb-2 ovo text-uppercase"><strong>All Ages & Levels</strong></h4>
                   <p class="card-text">Lessons for children, adults, and even toddlers!</p>
                 </div>
               </div>
@@ -165,12 +165,12 @@
             <div class="row g-0">
 
                 <div class="col-md-12 col-lg-4 text-center">
-                  <i class="fas fa-user-graduate fa-4x offers-icon"></i>
+                  <i class="fas fa-user-graduate fa-3x offers-icon"></i>
                 </div>
 
                 <div class="col-md-12 col-lg-8">
                   <div class="card-body text-center text-lg-start">
-                    <h4 class="card-title mb-4 ovo text-uppercase"><strong>Exam Prep</strong></h4>
+                    <h4 class="card-title mb-2 ovo text-uppercase"><strong>Exam Prep</strong></h4>
                     <p class="card-text">We specialize in preparing students for RCM (Royal Conservatory) Exams.</p>
                   </div>
                 </div>
@@ -181,12 +181,12 @@
           <div class="row g-0">
 
               <div class="col-md-12 col-lg-4 text-center">
-                <i class="far fa-calendar-check fa-4x offers-icon"></i>
+                <i class="far fa-calendar-check fa-3x offers-icon"></i>
               </div>
 
               <div class="col-md-12 col-lg-8">
                 <div class="card-body text-center text-lg-start">
-                  <h4 class="card-title mb-4 ovo text-uppercase"><strong>Flexibility</strong></h4>
+                  <h4 class="card-title mb-2 ovo text-uppercase"><strong>Flexibility</strong></h4>
                   <p class="card-text">We do our best to accomodate you on a day that works for you.</p>
                 </div>
               </div>
@@ -197,12 +197,12 @@
         <div class="row g-0">
 
             <div class="col-md-12 col-lg-4 text-center">
-              <i class="far fa-building fa-4x offers-icon"></i>
+              <i class="far fa-building fa-3x offers-icon"></i>
             </div>
 
             <div class="col-md-12 col-lg-8">
               <div class="card-body text-center text-lg-start">
-                <h4 class="card-title mb-4 ovo text-uppercase"><strong>Great Venue</strong></h4>
+                <h4 class="card-title mb-2 ovo text-uppercase"><strong>Great Venue</strong></h4>
                 <p class="card-text">Individual music rooms, recital area and a lounge!</p>
               </div>
             </div>
@@ -213,12 +213,12 @@
       <div class="row g-0">
 
           <div class="col-md-12 col-lg-4 text-center">
-            <i class="fas fa-map-marker-alt fa-4x offers-icon"></i>
+            <i class="fas fa-map-marker-alt fa-3x offers-icon"></i>
           </div>
 
           <div class="col-md-12 col-lg-8">
             <div class="card-body text-center text-lg-start">
-              <h4 class="card-title mb-4 ovo text-uppercase"><strong>Convenient Location</strong></h4>
+              <h4 class="card-title mb-2 ovo text-uppercase"><strong>Convenient Location</strong></h4>
               <p class="card-text">Humbertown Plaza: free parking, shops and cafés</p>
             </div>
           </div>
@@ -229,12 +229,12 @@
     <div class="row g-0">
 
         <div class="col-md-12 col-lg-4 text-center">
-          <i class="far fa-thumbs-up fa-4x offers-icon"></i>
+          <i class="far fa-thumbs-up fa-3x offers-icon"></i>
         </div>
 
         <div class="col-md-12 col-lg-8">
           <div class="card-body text-center text-lg-start">
-            <h4 class="card-title mb-4 ovo text-uppercase"><strong>Awesome Deals</strong></h4>
+            <h4 class="card-title mb-2 ovo text-uppercase"><strong>Awesome Deals</strong></h4>
             <p class="card-text">Referral prizes and family member discounts!</p>
           </div>
         </div>
