added content to teachers.html

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="col-md-5 col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="ovo">Music Lessons in Etobicoke</h1>
+                <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
                 <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
 
                 <div class="d-md-flex justify-content-center pt-3">
