--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
 
             <div class="col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="display-4">Music Lessons in Etobicoke</h1>
+                <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
                 <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
 
                 <div class="d-md-flex justify-content-center mt-5">
-                        <div class="btn btn-warning btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div>
+                        <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div>
                         <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</div>
                 </div>
             </div>
