--- a/teachers.html
+++ b/teachers.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="col-md-5 col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="ovo">Music Lessons in Etobicoke</h1>
+                <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
                 <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
 
                 <div class="d-md-flex justify-content-center pt-3">
@@ -85,9 +85,121 @@
 </nav><!--/navbar-->
 
 
+<!-- TEACHERS SECTION BEGINS -->
+
 <div class="container mt-5">
 
-    Teacher info goes here
+        <h3 class="display-4 text-muted">Teachers</h3>
+        <hr>
+
+        <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/raul.jpg" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0"> 
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Raul Pineda</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>drums</i></strong></p>
+                  <p class="card-text">Originally from Havana, Cuba, Raul Pineda started his musical career at the age of eight. Dazzled by the sounds of drums and percussion, he took lessons with several private teachers, who encouraged him to pursue music as a profession. After finishing his studies in Cuba, he immigrated to Canada in 2005 and continued his studies at Humber College, where he finished his Degree in “Contemporary Music” in 2010. During his time at Humber, he was awarded the Millennium Scholarship and, as a member of the Humber Studio Jazz Ensemble, gained a lot of experience working with world class artists such as Mike Stern, Randy Brecker, Dave Douglas, Labarbera Brothers, Chris Potter and others. Today, he teaches and continues performing and recording professionally in the city of Toronto.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-5">
+
+          <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/andrew.jpg" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0">
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Andrew Marzotto</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>guitar</i></strong></p>
+                  <p class="card-text">Andrew Marzotto is a Toronto born and based guitarist, composer and educator. He is a 2016 graduate of the Berklee College of Music in Boston, Massachusetts where he was a member of the Berklee Global Jazz Institute. At Berklee, he had the incredible opportunity to study with Mick Goodrick, Joe Lovano, Hal Crook, Danilo Perez, and David Tronzo. He has performed extensively throughout Toronto and Boston as well as toured extensively across the USA, Canada, and Europe with Justin Nozuka. In addition to being a busy performer, Andrew is also an in-demand session guitarist, having played on recordings by Young Thug, Jaden Smith, Nailah Blackman, Craig Cardiff and Dayna Stephens.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-5">
+
+          <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/yeri.png" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0">
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Yeri Lim (piano)</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>piano</i></strong></p>
+                  <p class="card-text">Yeri is a Toronto based pianist. She started playing piano at the age of 6 and has been studying diverse genres of music such as classical, Korean classical, jazz, contemporary pop, film, musical theatre, blues, church, and r&b music since then. In 2016, she started her music degree at Humber college and was selected as a recipient of a Humber piano scholarship. During her studies at Humber, she was a part of various recitals, showcases, and recording projects in and outside of school as a live or session piano/synth player. In 2020, she released her first EP ‘Bicycle Launch’, and focusing on her compositional works.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-5">
+
+          <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/jonathan.jpg" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0">
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Jonathan Stuchbery</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>guitar, classical guitar</i></strong></p>
+                  <p class="card-text">Jonathan Stuchbery is a classical guitarist and a specialist in lutes and historical guitars. As an educator, he encourages students to explore their musical interests while laying strong technical foundations and helping students approach their instruments and music with ease. Jonathan is experienced as a guitar (all styles) and lute teacher, as well as a repertoire coach for vocalists and instrumentalists working on baroque and renaissance music. He is busy as a performer at home and abroad where he is active with multiple ensembles and festivals. Jonathan holds a Master’s in Historical Performance from the Escola Superior de Música de Catalunya in Barcelona. He was also recognized for outstanding achievement in lute at McGill’s Schulich School of Music, receiving his B.Mus. in guitar and lute under teachers Jérôme Ducharme and Sylvain Bergeron.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-5">
+
+          <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/oksana.jpg" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0">
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Oksana Skira</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>co-founder, piano</i></strong></p>
+                  <p class="card-text">Oksana Skira is a professional pianist, accompanist, performer, teacher, and a recording artist. She began her music education at Barvinsky State Music College of Drohobych (Drohobych, Ukraine), going on to receive a Masters in Piano Performance from Mykola Lysenko Lviv National Music Academy (Lviv, Ukraine). While studying in Drohobych, she won 2nd place in the Western Ukraine Musical Competition. Oksana has recorded and released three independent CDs and continues to be active as a performer, accompanist, and teacher in Toronto and the GTA. At DCAM, Oksana teaches beginner to advanced piano.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-5">
+
+          <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/teachers/terry.jpg" class="img-fluid rounded-start img-thumbnail" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body pt-md-0">
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Terry Babyuk</h5>
+                  <p class="dcam-border text-center dcam-text-red"><strong><i>co-founder, managing director, piano, theory</i></strong></p>
+                  <p class="card-text">Taras (Terry) Babyuk started his musical journey with accordion lessons at the age of seven. In his teens, he began piano lessons and soon decided to dedicate himself fully to this instrument. Terry holds Level 9 RCM Certificate in piano and has taught beginner to intermediate piano and beginner to advanced music theory for many years (a self-described music theory nerd!). In addition to his fondness for Classical and Romantic-era music, he also loves film music and enjoys composing original piano music in his spare time. Aside from his teaching duties at DCAM, he is also its co-founder and Managing Director.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
 
 </div><!--/container-->
 
