--- a/teachers.html
+++ b/teachers.html
@@ -133,7 +133,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body pt-md-0">
-                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Yeri Lim (piano)</h5>
+                  <h5 class="card-title ovo display-6 dcam-text-red text-center">Yeri Lim</h5>
                   <p class="dcam-border text-center dcam-text-red"><strong><i>piano</i></strong></p>
                   <p class="card-text">Yeri is a Toronto based pianist. She started playing piano at the age of 6 and has been studying diverse genres of music such as classical, Korean classical, jazz, contemporary pop, film, musical theatre, blues, church, and r&b music since then. In 2016, she started her music degree at Humber college and was selected as a recipient of a Humber piano scholarship. During her studies at Humber, she was a part of various recitals, showcases, and recording projects in and outside of school as a live or session piano/synth player. In 2020, she released her first EP ‘Bicycle Launch’, and focusing on her compositional works.</p>
                 </div>
